# article-pipeline

./: .gitignore  PLAN.md  README.md  config.example.yaml  pyproject.toml
src/article_pipeline/: config.py  engine.py  errors.py  html_parser.py  images.py  logging_setup.py  main.py  metadata.py  net.py  processor.py  rate_limit.py  stage1_ingest.py  stage2_summarize.py  stage3_render_markdown.py  stage3_render_typst.py  tag_scan.py  watch.py  wizard.py  youtube.py
tests/: test_config_wizard.py  test_engine_client.py  test_html_parser_backoff.py  test_images.py  test_markdown_links.py  test_net.py  test_processor_titles.py  test_render_markdown_contract.py  test_render_typst_contract.py  test_stage2_extract_json.py  test_tag_scan.py  test_youtube.py
